k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cerbos-base  # Will be replaced by overlays
  labels:
    name: cerbos
