k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cerbos
  labels:
    app: cerbos
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3592
      targetPort: http
      protocol: TCP
    - name: grpc
      port: 3593
      targetPort: grpc
      protocol: TCP
  selector:
    app: cerbos
